apps/base/litellm/litellm.namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: litellm-system
  labels:
    networking.tinyrack.net/isolation: enabled
