apps/base/litellm/litellm.ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: litellm-ingress-route
  namespace: litellm-system
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`llm.tinyrack.net`)
      kind: Rule
      services:
        - name: litellm-service
          kind: Service
          port: 80
          passHostHeader: true
          scheme: http
  tls:
    secretName: letsencrypt-wildcard-cert-tinyrack.net
